html structur for edit task is done

--- a/style/style.css
+++ b/style/style.css
@@ -14,3 +14,4 @@
 @import url(./overlay_board_template.css);
 @import url(./add_task.css);
 @import url(./header.css);
+@import url(./board_resp.css);
