--- a/style/contacts_responsive.css
+++ b/style/contacts_responsive.css
@@ -303,6 +303,10 @@
         display: none;
     }
 
+    .add-new-contact-btn-container {
+        display: none;
+    }
+
     .contact-inforamtion-txt {
         height: auto;
     }
@@ -337,6 +341,46 @@
         border-radius: 50%;
         border: 1px solid #2A3647;
         background-color: #2A3647;
+    }
+
+    .responsiv-edit-delete-menu-container {
+        position: relative;
+    }
+
+    .responsiv-edit-delete-menu {
+        position: absolute;
+        height: 100px;
+        width: 116px;
+        background-color: #FFFFFF;
+        right: -8px;
+        top: 0;
+        transform: translateY(-60%);
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        border-radius: 20px 20px 0 20px;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    .responsiv-edit-delete-menu button {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding: 8px;
+        width: 96px;
+        height: 40px;
+        border-width: 0;
+    }
+
+    .responsiv-edit-delete-menu button svg {
+        height: 24px;
+        width: 24px;
+    }
+
+    .responsiv-edit-delete-menu button p {
+        font-size: 16px;
+        font-weight: 400;
     }
 
 }
