--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -338,6 +338,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border-radius: 10px;
     padding: 10px 21px;
     margin: 8px 0 32px 0;
+    cursor: pointer;
 }
 
 .date-input input {
@@ -352,11 +353,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 24px;
     width: 24px;
     transition: 100ms;
-}
-
-.date-input button:hover {
-    background-color: rgba(238, 238, 238, 1);
-    border-radius: 50%;
 }
 
 .change-priority {
@@ -523,6 +519,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.edit-subtask{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    /* border-bottom: 1px solid rgba(41, 171, 226, 1);                              zu change Subtasks rein, wenn edit Subtask aktiv ist */
+}
+
+.edit-subtask input{
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
 .bc_r{
     background-color: rgba(255, 61, 0, 1) !important;
     font-weight: 700;
@@ -539,6 +548,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     background-color: rgba(122, 226, 41, 1) !important;
     font-weight: 700;
     color: white;
+}
+
+.bc_r:hover{
+    box-shadow: none !important;
+}
+
+.bc_o:hover{
+    box-shadow: none !important;
+}
+
+.bc_g:hover{
+    box-shadow: none !important;
 }
 
 .fill_red{
