--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 @import url(./standart.css);
 @import url(./summary.css);
+@import url(./summary_responsive.css);
 @import url(./board.css);
 @import url(./navbar.css);
 @import url(./contacts.css);
